--- a/index.html
+++ b/index.html
@@ -44,17 +44,28 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3">
-            <form>
+            <form class="bg-dark">
                 <p>Filter Search</p>
-                <ul>
-                  <li>
+                <ul class="list-group bg-dark">
+                  <li class="list-group bg-dark">
                     <label for="date">Enter Date</label>
-                    <input type="text b-dark" placeholder="1/10/2010" id="datetime" />
+                    <input type="text" placeholder="1/10/2010" id="datetime" />
                   </li>
-                  <li class="list-group-item bg-dark"  style="font-family: inherit; font-size: 1rem;">
-                     <button id="filter-btn" type="button" class="btn btn-default">
-                       Filter Table
-                     </button>
+                  <li class="list-group bg-dark">
+                    <label for="city">Enter City</label>
+                    <input type="text" placeholder="grants pass" id="city" />
+                  </li>
+                  <li class="list-group bg-dark">
+                    <label for="state">Enter State</label>
+                    <input type="text" placeholder="or" id="state" />
+                  </li>
+                  <li class="list-group bg-dark">
+                    <label for="country">Enter Country</label>
+                    <input type="text" placeholder="us" id="country" />
+                  </li>
+                  <li class="list-group bg-dark">
+                    <label for="shape">Enter Shape</label>
+                    <input type="text" placeholder="triangle" id="shape" />
                   </li>
                 </ul>
                </form>
